# azmeta-libs

./: README.md
azmeta/: README.md  dev-requirements.txt  mypy.ini  requirements.txt  setup.cfg
azmeta-dataflow/: README.md
azmeta-notebook/: README.md  pyproject.toml  setup.cfg
azmeta-notebook/src/azmeta/notebook/: context.py  interactive.py  utils.py
azmeta/src/azmeta/access/: __init__.py  _core.py  advisor.py  billing.py  config.py  config_default.yaml  monitor_logs.py  reporting.py  reservations.py  resource_graph.py  resource_id.py  specifications.py
azmeta/src/azmeta/access/context/: __init__.py  cli_context.py  interface.py
azmeta/src/azmeta/access/kusto/: __init__.py  _deserialize.py  _serialize.py
azmeta/src/azmeta/access/utils/: chunking.py  math.py  sdk.py  types.py
azmeta/src/azuremeta/access/: advisor.py  billing.py  resource_graph.py  specifications.py
azmeta/src/azuremeta/access/kusto/: _response.py
