[metadata]
name = azmeta
version = 0.1.0
description = Uniform access layer for Azure metadata.
author = Will Brown
author_email = 5326080+wpbrown@users.noreply.github.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/wpbrown/azmeta-libs
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    azure-cli-core
    azure-core
    azure-kusto-data
    azure-loganalytics
    azure-mgmt-advisor
    azure-mgmt-consumption
    azure-mgmt-compute
    azure-mgmt-resourcegraph
    nbconvert
    pandas
    confuse

[options.packages.find]
where = src
exclude =
    azmeta